# LiliaUI

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  lilia.tools.profile.mjs  package.json  playwright.visual.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node-scripts.json  vitest.config.ts  vitest.perf.config.ts
.github/scripts/: migrate-pnpm.mjs
.github/workflows/: agent-pnpm-diagnostic.yml  agent-pnpm-final-diagnostics.yml  agent-pnpm-lock-refresh.yml  agent-pnpm-lockfile.yml  agent-pnpm-migrate.yml  agent-pnpm-test-log.yml  agent-pnpm-typecheck.yml  agent-pnpm-windows-test.yml  ci.yml  reusable-pnpm-generation-diagnostic.yml  reusable-pnpm-migration-v2.yml  reusable-pnpm-migration-v3.yml  reusable-pnpm-migration.yml
.migration-output/: migration-bundle.json
crates/tauri-plugin-lilia/: Cargo.toml  build.rs
crates/tauri-plugin-lilia/permissions/: default.toml
crates/tauri-plugin-lilia/permissions/autogenerated/: reference.md
crates/tauri-plugin-lilia/permissions/autogenerated/commands/: set_window_backdrop.toml
crates/tauri-plugin-lilia/permissions/schemas/: schema.json
crates/tauri-plugin-lilia/src/: lib.rs
docs/: workspace-regions.md
docs/ui-layers/: architecture.md  component-contract.md  deprecations.md  migration.md  release.md  (+4 more)
scripts/: check-node-syntax.mjs  check-ui-boundaries.mjs
src/: commands.ts  createLiliaApp.ts  index.ts
tests/: config-types.test.ts  config.test.mjs  nana-package.test.mjs  nodeRuntime.test.mjs  setupTests.ts  tools-build.test.mjs  ui-package-exports.test.mjs  ui-tools.test.mjs
(+119 files in other folders)
